fix(tile-view): scrollbar size.
The scrollbar size was changing while scrolling.

--- a/css/filmstrip/_tile_view.scss
+++ b/css/filmstrip/_tile_view.scss
@@ -5,8 +5,6 @@
     .remote-videos {
         align-items: center;
         box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
         overscroll-behavior: contain;
     }
 
